[gd_scene load_steps=5 format=3 uid="uid://mr5vrk423sio"]

[ext_resource type="Script" uid="uid://c5re6433pfdv2" path="res://scenes/interactive/combination/prefab/combination_input.gd" id="1_phcvn"]
[ext_resource type="Texture2D" uid="uid://d0vkvnni7grp5" path="res://textures/symbols/rotate_up.png" id="2_fsdxu"]
[ext_resource type="Texture2D" uid="uid://d0mn405dbqw45" path="res://textures/symbols/rotate_down.png" id="3_1wwny"]

[sub_resource type="Theme" id="Theme_phcvn"]
default_font_size = 48

[node name="CombinationInput" type="VBoxContainer"]
offset_right = 23.0
offset_bottom = 48.0
theme = SubResource("Theme_phcvn")
alignment = 1
script = ExtResource("1_phcvn")

[node name="Up" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 24)
layout_mode = 2
icon = ExtResource("2_fsdxu")
icon_alignment = 1
expand_icon = true

[node name="Center" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
focus_mode = 0
text = "0"

[node name="Down" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 25)
layout_mode = 2
icon = ExtResource("3_1wwny")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
